<!--
  Copyright (C) 2025 Andre Suryana, SkyRoute (https://github.com/skyroute)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SkyRouteMQ Demo</string>
    <string name="hint_topic">Topic</string>
    <string name="hint_message">Message</string>
    <string name="btn_publish">Publish</string>
    <string name="btn_clear">Clear Logs</string>
    <string name="placeholder_logs" tools:ignore="TypographyEllipsis">Logs will appear here...</string>

    <string name="title_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_restart">Restart</string>
    <string name="action_later">Later</string>

    <string name="dialog_save_settings_title">Restart Required</string>
    <string name="dialog_save_settings_msg">Your changes have been saved. To apply them, the app needs to restart.\nWould you like to restart now?</string>

</resources>
